--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "ie-shim": "^0.1.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "~5.0.2",
+    
     "zone.js": "0.8.5",
     "typescript": "~2.2.2",
     "url-loader": "^0.5.8",
@@ -91,9 +92,7 @@
     "webpack-dev-middleware": "^1.10.1",
     "webpack-dev-server": "~2.4.2",
     "webpack-dll-bundles-plugin": "^1.0.0-beta.5",
-    "webpack-merge": "~4.1.0"
-  },
-  "devDependencies": {
+    "webpack-merge": "~4.1.0",
     "@angular/compiler-cli": "~4.1.3",
     "@types/hammerjs": "^2.0.34",
     "@types/jasmine": "2.5.45",
@@ -150,6 +149,8 @@
     "tslint": "~4.5.1",
     "tslint-loader": "^3.5.2",
     "typedoc": "^0.5.10"
+  },
+  "devDependencies": {
   },
   "repository": {
     "type": "git",
